@@ -23,6 +23,7 @@
     TCP_CORK (saves two syscalls)
   add io_fd_flags so the caller can tell io_fd whether the socket is blocking
     (saves one fcntl syscall)
+  more constness for stralloc and buffer
 
 0.29:
   save 8 bytes in taia.h for 64-bit systems
